trunk/Archive2/a5/56b34abc8bcb13/output
main.cpp:45:53: error: no member named 'type' in 'requirements<EqualityComparable<pathological, pathological>, void>'
    requirements<EqualityComparable<pathological>>::type {};
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
1 error generated.
